samples/_failures_safe/1761788739_1ff80e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e204bef2.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_e204bef2.c:166:13: error: expected ‘:’ or ‘...’ at end of input
  166 |             case TOKEN_OPERATOR
      |             ^~~~
./samples/SAFE/__tmp_e204bef2.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e204bef2.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e204bef2.c:166:13: error: expected declaration or statement at end of input
